fixed some spacing

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -9,6 +9,8 @@ $white: hsl(0, 0%, 100%);
 $title-font: 'Fraunces', serif;
 $body-font: 'Montserrat', sans-serif;
 
+$card-border-radius: 8px;
+
 html {
     font-size: 62.5%;
 }
@@ -28,7 +30,7 @@ body {
     height: 300px;
     background-color: $white;
     margin: auto;
-    border-radius: 10px;
+    border-radius: $card-border-radius;
     margin: 10px;
 }
 
@@ -42,13 +44,13 @@ body {
 
 .perfume-img {
     max-height: 100%;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
+    border-top-left-radius: $card-border-radius;
+    border-bottom-left-radius: $card-border-radius;
 }
 
 .category {
     position: relative;
-    top: 10px;
+    top: 20px;
     font-family: $body-font;
     font-size: 0.7rem;
     font-weight: 500;
@@ -58,28 +60,31 @@ body {
 
 .title {
     position: relative;
-    top: 10px;
+    top: 30px;
     font-family: $title-font;
-    font-size: 1.8rem;
+    font-size: 2.0rem;
+    line-height: 1;
     color: $dark-blue;
 }
 
 .description {
     position: relative;
-    top: 20px;
+    top: 50px;
     font-family: $body-font;
+    font-size: 0.9rem;
+    line-height: 1.6;
     color: $grayish-blue;
 }
 
 .price {
     position: relative;
-    top: 40px;
+    top: 65px;
     display: flex;
     align-items: center;
 
     .discounted-price {
         font-family: $title-font;
-        font-size: 1.8rem;
+        font-size: 2rem;
         color: $dark-cyan;
     }
 
@@ -93,7 +98,7 @@ body {
 
 .add-cart {
     position: relative;
-    top: 60px;
+    top: 90px;
     height: 30px;
     color: $white;
     font-family: $body-font;
